Update header description to reflect current branding

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>Marcos Ilgi</h1>
-    <p>Creative Systems. Business Thinking. Real Solutions.</p>
+    <p>Digital Creator & Strategist</p>
   </header>
 
   <main>
