--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section id="profil">
       <h2>Über mich</h2>
       <div class="profil-container">
-        <img src="https://via.placeholder.com/100" alt="Profilbild von Marcos Ilgi" class="profilbild" />
+        <img src="./avatar.jpg" alt="Profilbild von Marcos Ilgi" class="profilbild" />
         <div class="profiltext">
           <ul>
             <li><strong>Name:</strong> Marcos Ilgi</li>
