--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="manifest" href="/manifest.webmanifest" />
-  <link rel="icon" href="/icons/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="/public/icons/favicon.ico" type="image/x-icon" />
   <meta name="theme-color" content="#90ee90" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Biopic - Marcos Ilgi</title>
