--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Biopic – Marcos Ilgi</title>
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 </head>
 <body>
   <header>
