Update index.html to include apple-touch-icon and remove favicon link

--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="manifest" href="/manifest.webmanifest" />
-  <link rel="icon" href="/icons/favicon.ico" type="image/x-icon" />
-  <meta name="theme-color" content="#90ee90" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="apple-touch-icon" href="/path/to/apple-touch-icon.png" />
   <title>Biopic - Marcos Ilgi</title>
 </head>
 
